Add neurosurgery url

--- a/index.html
+++ b/index.html
@@ -166,16 +166,6 @@
             }
         }
 
-        .add-link-instruction {
-            background: #f8f9fa;
-            border: 2px dashed #dee2e6;
-            border-radius: 12px;
-            padding: 1.5rem;
-            margin-top: 2rem;
-            text-align: center;
-            color: #6c757d;
-        }
-
         .add-link-instruction h3 {
             color: #495057;
             margin-bottom: 0.5rem;
@@ -200,7 +190,8 @@
         <main class="content">
             <section class="links-section">
                 <h2>Research & AI</h2>
-                
+
+                <!-- IMPORTANT: Use this article a perfect example on how to create following articles-->
                 <article class="link-card">
                     <h3>AI vs Human Instruction in Surgical Training</h3>
                     <div>
@@ -213,35 +204,26 @@
                         Read on Nature Scientific Reports
                     </a>
                 </article>
-                
-                <!-- Add more links here following the same structure -->
-                <!--
+
                 <article class="link-card">
-                    <h3>Your Link Title</h3>
+                    <h3>AI-Driven System for Neurosurgery</h3>
                     <div>
-                        <span class="tag">Tag1</span>
-                        <span class="tag">Tag2</span>
+                        <span class="tag">AI</span>
+                        <span class="tag">Neurosurgery</span>
+                        <span class="tag">Medical Robotics</span>
+                        <span class="tag">Research</span>
                     </div>
-                    <p>Brief description of what this link contains...</p>
-                    <a href="https://your-link-here.com" target="_blank" rel="noopener noreferrer">
-                        Read More
+                    <p>Development of an AI system for precise brain tumor identification using deep learning on MRI scans. Achieved 0.87 Dice similarity coefficient and demonstrated improved accuracy, efficiency, and reduced cognitive load for neurosurgeons in usability testing.</p>
+                    <a href="https://www.degruyterbrill.com/document/doi/10.1515/auto-2023-0061/html?lang=en" target="_blank" rel="noopener noreferrer">
+                        Read on De Gruyter
                     </a>
                 </article>
-                -->
             </section>
-
-            <div class="add-link-instruction">
-                <h3>Adding More Links</h3>
-                <p>To add more links, copy the commented template above and customize:</p>
-                <p>1. Replace <code>Your Link Title</code> with the title</p>
-                <p>2. Update tags in <code>&lt;span class="tag"&gt;</code></p>
-                <p>3. Add description in the <code>&lt;p&gt;</code> tag</p>
-                <p>4. Update the <code>href</code> attribute with your URL</p>
-            </div>
         </main>
 
         <footer class="footer">
             <p>This page is hosted on GitHub Pages • Last updated: <span id="last-updated"></span></p>
+            <p>Generated with claude code assistance</p>
         </footer>
     </div>
 
