--- a/index.html
+++ b/index.html
@@ -218,12 +218,26 @@
                         Read on De Gruyter
                     </a>
                 </article>
+
+                <article class="link-card">
+                    <h3>The Rise of Robotics and AI-Assisted Surgery</h3>
+                    <div>
+                        <span class="tag">AI</span>
+                        <span class="tag">Robotics</span>
+                        <span class="tag">Surgery</span>
+                        <span class="tag">Healthcare</span>
+                    </div>
+                    <p>Comprehensive study on AI and robotics transforming surgical practices. Shows 25% reduction in operative time, 30% decrease in complications, and 40% improvement in surgical precision. Synthesizes findings from 25 peer-reviewed studies (2024-2025).</p>
+                    <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC12181090/" target="_blank" rel="noopener noreferrer">
+                        Read on PMC
+                    </a>
+                </article>
             </section>
         </main>
 
         <footer class="footer">
             <p>This page is hosted on GitHub Pages • Last updated: <span id="last-updated"></span></p>
-            <p>Generated with claude code assistance</p>
+            <p>Generated with the Claude Code assistance</p>
         </footer>
     </div>
 
