Add links, improve readability

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Useful Links | Research & AI Resources</title>
+    <title>Useful Links | ecom.tech x Just AI</title>
     <style>
         * {
             margin: 0;
@@ -183,53 +183,87 @@
 <body>
     <div class="container">
         <header class="header">
-            <h1>Useful Links</h1>
-            <p>Research, AI, and Educational Resources Collection</p>
+            <h1>Полезные ссылки</h1>
+            <p>ИИ в реальном времени и медицинские технологии</p>
         </header>
 
         <main class="content">
             <section class="links-section">
-                <h2>Research & AI</h2>
+                <h2>На попробовать</h2>
 
-                <!-- IMPORTANT: Use this article a perfect example on how to create following articles-->
                 <article class="link-card">
-                    <h3>AI vs Human Instruction in Surgical Training</h3>
-                    <div>
-                        <span class="tag">AI</span>
-                        <span class="tag">Medical Education</span>
-                        <span class="tag">Research</span>
-                    </div>
-                    <p>A randomized controlled trial comparing real-time artificial intelligence feedback to in-person expert instruction in teaching surgical technical skills. Shows AI training achieved better performance outcomes than traditional methods.</p>
+                    <h3>Google AI Studio</h3>
+                    <p>Попробовать минимальными усилиями</p>
+                    <a href="https://aistudio.google.com/u/1/live" target="_blank" rel="noopener noreferrer">
+                        Смотреть на GitHub
+                    </a>
+                </article>
+
+                <article class="link-card">
+                    <h3>Live API - Web Console</h3>
+                    <p>Хороший стартер, чтобы покрутить у себя на машине (ручные стартеры в машине лучше не использовать)</p>
+                    <a href="https://github.com/google-gemini/live-api-web-console" target="_blank" rel="noopener noreferrer">
+                        Смотреть на GitHub
+                    </a>
+                </article>
+
+                <article class="link-card">
+                    <h3>Gemini Cookbook</h3>
+                    <p>Изучение Gemini API с примерами (в том числе Live модели). Также можно поискать в репозиториях того же аккаунта.</p>
+                    <a href="https://github.com/google-gemini/cookbook" target="_blank" rel="noopener noreferrer">
+                        Смотреть на GitHub
+                    </a>
+                </article>
+
+                <h2>Production-ready варианты</h2>
+
+                <article class="link-card">
+                    <h3>LiveKit Realtime</h3>
+                    <p>Многофункциональная платформа для телефонии, стриминга, и др.</p>
+                    <a href="https://docs.livekit.io/agents/integrations/realtime/" target="_blank" rel="noopener noreferrer">
+                        Читать документацию
+                    </a>
+                </article>
+
+                <article class="link-card">
+                    <h3>Pipecat + Gemini Live</h3>
+                    <p>Мультимодальные возможности Gemini в реальном времени</p>
+                    <a href="https://docs.pipecat.ai/guides/features/gemini-multimodal-live" target="_blank" rel="noopener noreferrer">
+                        Читать гайд
+                    </a>
+                </article>
+
+                <h2>Медицинский ИИ</h2>
+
+                <article class="link-card">
+                    <h3>MedGemma</h3>
+                    <p>Специализированные модели Google для медицинских приложений в агентной связке с gemini live</p>
+                    <a href="https://developers.google.com/health-ai-developer-foundations/medgemma#agentic_orchestration" target="_blank" rel="noopener noreferrer">
+                        Источник
+                    </a>
+                </article>
+
+                <article class="link-card">
+                    <h3>ИИ в хирургии</h3>
+                    <p>Исследование эффективности ИИ vs человека в обучении хирургии</p>
                     <a href="https://www.nature.com/articles/s41598-024-65716-8" target="_blank" rel="noopener noreferrer">
-                        Read on Nature Scientific Reports
+                        Читать статью Nature
                     </a>
                 </article>
 
                 <article class="link-card">
-                    <h3>AI-Driven System for Neurosurgery</h3>
-                    <div>
-                        <span class="tag">AI</span>
-                        <span class="tag">Neurosurgery</span>
-                        <span class="tag">Medical Robotics</span>
-                        <span class="tag">Research</span>
-                    </div>
-                    <p>Development of an AI system for precise brain tumor identification using deep learning on MRI scans. Achieved 0.87 Dice similarity coefficient and demonstrated improved accuracy, efficiency, and reduced cognitive load for neurosurgeons in usability testing.</p>
+                    <h3>ИИ в нейрохирургии</h3>
+                    <p>Система ИИ для точной идентификации опухолей мозга на МРТ снимках</p>
                     <a href="https://www.degruyterbrill.com/document/doi/10.1515/auto-2023-0061/html?lang=en" target="_blank" rel="noopener noreferrer">
-                        Read on De Gruyter
+                        Читать исследование
                     </a>
                 </article>
 
                 <article class="link-card">
-                    <h3>The Rise of Robotics and AI-Assisted Surgery</h3>
-                    <div>
-                        <span class="tag">AI</span>
-                        <span class="tag">Robotics</span>
-                        <span class="tag">Surgery</span>
-                        <span class="tag">Healthcare</span>
-                    </div>
-                    <p>Comprehensive study on AI and robotics transforming surgical practices. Shows 25% reduction in operative time, 30% decrease in complications, and 40% improvement in surgical precision. Synthesizes findings from 25 peer-reviewed studies (2024-2025).</p>
+                    <h3>Роботизированная хирургия</h3>
+                    <p>Исследование влияния ИИ и роботики на хирургические практики</p>
                     <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC12181090/" target="_blank" rel="noopener noreferrer">
-                        Read on PMC
+                        Читать на PMC
                     </a>
                 </article>
             </section>
@@ -237,7 +271,7 @@
 
         <footer class="footer">
             <p>This page is hosted on GitHub Pages • Last updated: <span id="last-updated"></span></p>
-            <p>Generated with the Claude Code assistance</p>
+            <p>Generated with the Claude Code zero-shot assistance</p>
         </footer>
     </div>
 
